fix bug of not build from build folder replace src with   will bring the right Makefile src = .. instead of ../../

--- a/jupiter/src/Makefile.in
+++ b/jupiter/src/Makefile.in
@@ -11,11 +11,15 @@ prefix= @prefix@
 exec_prefix =@exec_prefix@
 bindir = @bindir@
 
+# VPATH staff
+srcdir = @srcdir@
+VPATH =  @srcdir@
+
 all: jupiter
 
 
 jupiter: main.c
-	gcc -g -O0 -o $@ main.c
+	gcc -g -O0 -o $@ $(srcdir)/main.c
 
 check: all
 	./jupiter | grep "Hello from .*jupiter"
