--- a/jupiter/src/Makefile.in
+++ b/jupiter/src/Makefile.in
@@ -32,7 +32,7 @@ all: jupiter
 
 jupiter: main.c
 #	gcc -g -O0 -o $@ $(srcdir)/main.c
-	$(CC) -I. -I$(srcdir) -I.. $(DEF) $(CPPFLAGS) $(CFLAGS) -o $@ main.c  $(LIBS)
+	$(CC) -I. -I$(srcdir) -I.. $(DEFS) $(CPPFLAGS) $(CFLAGS) -o $@ main.c  $(LIBS)
 
 #	gcc -g -O0 -o $@ $(srcdir)/main.c
 
