ADDED pthread condition check, but not working

--- a/jupiter/configure.ac
+++ b/jupiter/configure.ac
@@ -5,8 +5,12 @@ AC_PREREQ([2.69])
 AC_INIT([Jupiter], [1.0], [jupiterbugreport@example.org])
 AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS([config.h])
-AC_DEFINE(HAVE_CONFIG_H , 1)
 
+	AC_MSG_WARN([
+--------------------------------------------------
+The pthread library and header file required to build jupiter. Stoppin...
+check 'config.log' for more information.
+------------------------------------------------------------------------])
 
 # Checks for programs.
 AC_PROG_CC
@@ -17,12 +21,26 @@ _DEBUG_END_
 AC_PROG_INSTALL
 
 # Checks for libraries. check for pthead lib
-AC_SEARCH_LIBS([pthread_create], [pthread]) 
 AC_SEARCH_LIBS([dlopen],[dl])
 
 
 # Checks for header files.
 AC_CHECK_HEADERS([stdlib.h pthread.h])
+AC_CHECK_HEADERS([stdlib.h ])
+have_pthreads=no
+
+AC_SEARCH_LIBS([pthread_create], [pthread], [have_pthreads=yes]) 
+if test "x{have_pthreads}" = xyes; then
+	AC_CHECK_HEADERS([pthread.h],[],[have_pthreads=no])
+fi
+
+if test "x{have_ptheads}" = xno; then
+	AC_MSG_WARN([
+--------------------------------------------------
+The pthread library and header file required to build jupiter. Stoppin...
+check 'config.log' for more information.
+------------------------------------------------------------------------])
+fi
 
 AC_CHECK_HEADERS([dlfcn.h])
 # Checks for typedefs, structures, and compiler characteristics.
