--- a/jupiter/src/Makefile
+++ b/jupiter/src/Makefile
@@ -20,7 +20,7 @@ CC	=  gcc
 DEFS    = -DHAVE_CONFIG_H
 CFLAGS  = -g -O2
 CPPFLAGS =
-LIBS	 = -ldl -lpthread 
+LIBS	 = -lpthread -ldl 
 INSTALL  =/usr/bin/install -c
 INSTALL_DATA  =${INSTALL} -m 644
 INSTALL_PROGRAM= ${INSTALL}
