condition work, but waning msg not

--- a/jupiter/configure.ac
+++ b/jupiter/configure.ac
@@ -6,11 +6,6 @@ AC_INIT([Jupiter], [1.0], [jupiterbugreport@example.org])
 AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS([config.h])
 
-	AC_MSG_WARN([
---------------------------------------------------
-The pthread library and header file required to build jupiter. Stoppin...
-check 'config.log' for more information.
-------------------------------------------------------------------------])
 
 # Checks for programs.
 AC_PROG_CC
@@ -23,19 +18,27 @@ AC_PROG_INSTALL
 # Checks for libraries. check for pthead lib
 AC_SEARCH_LIBS([dlopen],[dl])
 
+have_pthreads=no
+AC_SEARCH_LIBS([pthread_create], [pthread], [have_pthreads=yes]) 
 
 # Checks for header files.
-AC_CHECK_HEADERS([stdlib.h pthread.h])
-AC_CHECK_HEADERS([stdlib.h ])
-have_pthreads=no
 
-AC_SEARCH_LIBS([pthread_create], [pthread], [have_pthreads=yes]) 
+AC_CHECK_HEADERS([stdlib.h ])
+AC_CHECK_HEADERS([stdlib.h ])
+
 if test "x{have_pthreads}" = xyes; then
+
 	AC_CHECK_HEADERS([pthread.h],[],[have_pthreads=no])
+	AC_MSG_ERROR([
+--------------------------------------------------
+The pthread library and header file required to build jupiter. Stoppin...
+check 'config.log' for more information.
+------------------------------------------------------------------------])
 fi
 
-if test "x{have_ptheads}" = xno; then
-	AC_MSG_WARN([
+if test "x{have_pthreads}" = xno; then
+
+	AC_MSG_ERROR([
 --------------------------------------------------
 The pthread library and header file required to build jupiter. Stoppin...
 check 'config.log' for more information.
