--- a/jupiter/configure.ac
+++ b/jupiter/configure.ac
@@ -1,47 +1,62 @@
 #                                               -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
-AC_PREREQ([2.69])
-AC_INIT([Jupiter], [1.0], [jupiterbugreport@example.org])
-AC_CONFIG_SRCDIR([src/main.c])
+	AC_PREREQ([2.69])
+	AC_INIT([Jupiter], [1.0], [jupiterbugreport@example.org])
+	AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS([config.h])
 
 
 # Checks for programs.
-AC_PROG_CC
-_DEBUG_START_
+	AC_PROG_CC
+	_DEBUG_START_
 AC_CHECK_PROG([bash_var],[bash],[yes],[no],,[/usr/sbin/bash])
-_DEBUG_END_
+	_DEBUG_END_
 
-AC_PROG_INSTALL
+	AC_PROG_INSTALL
 
 # Checks for libraries. check for pthead lib
 AC_SEARCH_LIBS([dlopen],[dl])
 
-have_pthreads=no
-AC_SEARCH_LIBS([pthread_create], [pthread], [have_pthreads=yes]) 
+# Check for command-line options
+AC_ARG_ENABLE([asyn-exec],
+               [  --disable-async-exec		 disable async exec],
+		[async_exec= ${enableval}],      [async_exec=yes])
+
+		have_pthreads=no
+		AC_SEARCH_LIBS([pthread_create], [pthread], [have_pthreads=yes]) 
 
 # Checks for header files.
 
-AC_CHECK_HEADERS([stdlib.h ])
-AC_CHECK_HEADERS([stdlib.h ])
-if test "x${have_pthreads}" = xyes; then
+		AC_CHECK_HEADERS([stdlib.h ])
+		if test "x${have_pthreads}" = xyes; then
 
-	AC_CHECK_HEADERS([pthread.h],[],[have_pthreads=no])
-	AC_MSG_RESULT([
-------------------------------------------------------------------------
-The pthread library and header file required to build We found it...
-check 'config.log' for more information.
-------------------------------------------------------------------------])
-fi
+		AC_CHECK_HEADERS([pthread.h],[],[have_pthreads=no])
+		AC_MSG_RESULT([
+			------------------------------------------------------------------------
+			The pthread library and header file required to build We found it...
+			check 'config.log' for more information.
+			------------------------------------------------------------------------])
+		fi
+
+
 
 if test "x${have_pthreads}" = xno; then
+	if test "x${async_exec}" = xyes; then
+		AC_MSG_WARN([
+		--------------------------------------------------
+		unable to find the pthreads on this system, build a single -thread version
+		check 'config.log' for more information.
+		------------------------------------------------------------------------])
+	fi
 
-	AC_MSG_ERROR([
---------------------------------------------------
-The pthread library and header file required to build jupiter. Stoppin...
-check 'config.log' for more information.
-------------------------------------------------------------------------])
+		async_exec = no
+fi
+
+
+
+if test "x${async_exec}" = xyes; then
+    AC_DEFINE([ASYNC_EXEC], 1, [async execution enabled])
 fi
 
 AC_CHECK_HEADERS([dlfcn.h])
@@ -49,6 +64,6 @@ AC_CHECK_HEADERS([dlfcn.h])
 
 # Checks for library functions.
 
-AC_CONFIG_FILES([Makefile
-                 src/Makefile])
-AC_OUTPUT
+	AC_CONFIG_FILES([Makefile
+			src/Makefile])
+	AC_OUTPUT
