--- a/jupiter/src/Makefile.am
+++ b/jupiter/src/Makefile.am
@@ -1,12 +1,19 @@
 bin_PROGRAM= jupiter
 jupiter_SOURCE = main.c
 
-check_SCRIPTS = greptest.sh
-TEST= $(check_SCRIPTS)
+
+# Produce Option Variable-- POV
+jupiter_CPPFLAGS = -I$(top_srcdir)/common
+jupiter_LDADD = ../common/libjupcommon.a
+# 
+#check_SCRIPTS = greptest.sh redendent.
+
+# TESTS is important  
+TESTS = $(check_SCRIPTS)
 
 greptest.sh:
 	echo './jupiter | grep "Hello" ' > greptest.sh
 	chmod +x greptest.sh
-CLEANFILES = greptest.sh
+CLEANFILES = greptest.sh  # add it to clean list
 
 
