--- a/jupiter/configure.ac
+++ b/jupiter/configure.ac
@@ -4,6 +4,8 @@
 	AC_PREREQ([2.69])
 	AC_INIT([Jupiter], [1.0], [jupiterbugreport@example.org])
 	AM_INIT_AUTOMAKE
+	LT_PREREQ([2,2])
+	LT_INIT([dlopen])
 	AC_CONFIG_SRCDIR([src/main.c])
 AC_CONFIG_HEADERS([config.h])
 
@@ -66,6 +68,8 @@ AC_CHECK_HEADERS([dlfcn.h])
 # Checks for library functions.
 
 	AC_CONFIG_FILES([Makefile
+			include/Makefile
+			libjup/Makefile
 			common/Makefile
 			src/Makefile])
 	AC_OUTPUT
