--- a/jupiter/common/Makefile.am
+++ b/jupiter/common/Makefile.am
@@ -1,4 +1,4 @@
 
-noinst_LIBRARIES = libjupcommon.a
-libjupcommon_a_SOURCES = jupcommon.h print.c
-libjupcommon_a_CFLAGS = -fPIC
+noinst_LTLIBRARIES = libjupcommon.la
+libjupcommon_la_SOURCES = jupcommon.h print.c
+libjupcommon_la_CFLAGS = -fPIC
