--- a/jupiter/configure.ac
+++ b/jupiter/configure.ac
@@ -14,7 +14,7 @@ AC_CONFIG_HEADERS([config.h])
 	_DEBUG_START_
 AC_CHECK_PROG([bash_var],[bash],[yes],[no],,[/usr/sbin/bash])
 	_DEBUG_END_
-	AC_PROG_RANLIB
+#	AC_PROG_RANLIB
 	AC_PROG_CC_C_O
 	AC_PROG_INSTALL
 
