--- a/jupiter/libjup/Makefile
+++ b/jupiter/libjup/Makefile
@@ -127,7 +127,7 @@ am__uninstall_files_from_dir = { \
   }
 am__installdirs = "$(DESTDIR)$(libdir)"
 LTLIBRARIES = $(lib_LTLIBRARIES)
-libjupiter_la_DEPENDENCIES = ../common/libjupcommon.la
+libjupiter_la_DEPENDENCIES = ../common/libjupcommon.a
 am_libjupiter_la_OBJECTS = libjupiter_la-jup_print.lo
 libjupiter_la_OBJECTS = $(am_libjupiter_la_OBJECTS)
 AM_V_lt = $(am__v_lt_$(V))
@@ -196,13 +196,13 @@ ETAGS = etags
 CTAGS = ctags
 am__DIST_COMMON = $(srcdir)/Makefile.in $(top_srcdir)/depcomp
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/mto/jupiter/automakeCh3/jupiter/missing aclocal-1.15
+ACLOCAL = ${SHELL} /home/lshi/automakeCh3/jupiter/missing aclocal-1.15
 AMTAR = $${TAR-tar}
 AM_DEFAULT_VERBOSITY = 1
 AR = ar
-AUTOCONF = ${SHELL} /home/mto/jupiter/automakeCh3/jupiter/missing autoconf
-AUTOHEADER = ${SHELL} /home/mto/jupiter/automakeCh3/jupiter/missing autoheader
-AUTOMAKE = ${SHELL} /home/mto/jupiter/automakeCh3/jupiter/missing automake-1.15
+AUTOCONF = ${SHELL} /home/lshi/automakeCh3/jupiter/missing autoconf
+AUTOHEADER = ${SHELL} /home/lshi/automakeCh3/jupiter/missing autoheader
+AUTOMAKE = ${SHELL} /home/lshi/automakeCh3/jupiter/missing automake-1.15
 AWK = gawk
 CC = gcc
 CCDEPMODE = depmode=gcc3
@@ -236,7 +236,7 @@ LIPO =
 LN_S = ln -s
 LTLIBOBJS = 
 LT_SYS_LIBRARY_PATH = 
-MAKEINFO = ${SHELL} /home/mto/jupiter/automakeCh3/jupiter/missing makeinfo
+MAKEINFO = ${SHELL} /home/lshi/automakeCh3/jupiter/missing makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
 NM = /usr/bin/nm -B
@@ -259,10 +259,10 @@ SET_MAKE =
 SHELL = /bin/bash
 STRIP = strip
 VERSION = 1.0
-abs_builddir = /home/mto/jupiter/automakeCh3/jupiter/libjup
-abs_srcdir = /home/mto/jupiter/automakeCh3/jupiter/libjup
-abs_top_builddir = /home/mto/jupiter/automakeCh3/jupiter
-abs_top_srcdir = /home/mto/jupiter/automakeCh3/jupiter
+abs_builddir = /home/lshi/automakeCh3/jupiter/libjup
+abs_srcdir = /home/lshi/automakeCh3/jupiter/libjup
+abs_top_builddir = /home/lshi/automakeCh3/jupiter
+abs_top_srcdir = /home/lshi/automakeCh3/jupiter
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_DUMPBIN = 
@@ -292,7 +292,7 @@ host_vendor = pc
 htmldir = ${docdir}
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/mto/jupiter/automakeCh3/jupiter/install-sh
+install_sh = ${SHELL} /home/lshi/automakeCh3/jupiter/install-sh
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
@@ -316,7 +316,8 @@ top_srcdir = ..
 lib_LTLIBRARIES = libjupiter.la
 libjupiter_la_SOURCES = jup_print.c
 libjupiter_la_CPPFLAGS = -I$(top_srcdir)/include -I$(top_srcdir)/common
-libjupiter_la_LIBADD = ../common/libjupcommon.la
+#libjupiter_la_LIBADD = ../common/libjupcommon.la:q
+libjupiter_la_LIBADD = ../common/libjupcommon.a
 all: all-am
 
 .SUFFIXES:
