MODULES build works

--- a/jupiter/src/Makefile.am
+++ b/jupiter/src/Makefile.am
@@ -1,5 +1,7 @@
+SUBDIRS = modules/hithere
+
 bin_PROGRAM= jupiter
-jupiter_SOURCE = main.c
+jupiter_SOURCE = main.c module.h #
 
 
 # Produce Option Variable-- POV
